<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:padding="4dp"
            android:contentDescription="@string/fragment_settings_go_back"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="@id/tv_settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_settings" />

        <TextView
            android:id="@+id/tv_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/fragment_settings_settings"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_back_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings">

            <ImageView
                android:id="@+id/iv_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fragments_settings_contacts_icon"
                android:src="@drawable/ic_baseline_import_contacts_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_get_contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/fragment_settings_get_contacts"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_contact"
                app:layout_constraintStart_toEndOf="@id/iv_contact"
                app:layout_constraintTop_toTopOf="@id/iv_contact" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="@id/cl_contacts"
            app:layout_constraintStart_toStartOf="@id/cl_contacts"
            app:layout_constraintTop_toBottomOf="@id/cl_contacts">

            <ImageView
                android:id="@+id/iv_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fragments_settings_notification_icon"
                android:src="@drawable/ic_baseline_notifications_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_notification_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/fragment_settings_notification"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_notification"
                app:layout_constraintStart_toEndOf="@id/iv_notification"
                app:layout_constraintTop_toTopOf="@id/iv_notification" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_security"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="@id/cl_contacts"
            app:layout_constraintStart_toStartOf="@id/cl_contacts"
            app:layout_constraintTop_toBottomOf="@id/cl_notification">

            <ImageView
                android:id="@+id/iv_security"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fragment_settings_security_icon"
                android:src="@drawable/ic_baseline_security_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_security"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/fragment_settings_security"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_security"
                app:layout_constraintStart_toEndOf="@id/iv_security"
                app:layout_constraintTop_toTopOf="@id/iv_security" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>